Gravity Form - responsive alignment issue fixing

--- a/src/blocks/cf7-designer/style.scss
+++ b/src/blocks/cf7-designer/style.scss
@@ -246,7 +246,9 @@
 		margin-right: auto;
 		margin-left: auto;
 	}
+}
 
+@media (min-width: 360px) and (max-width: 780px){
 	.uagb-cf7-styler__btn-align-tablet-justify input.wpcf7-form-control.wpcf7-submit {
 		-webkit-box-pack: center;
 		-ms-flex-pack: center;
